Fixed Missing Database moved to github project app folder

--- a/FoodDatabase/Views/MfpDay/DayDisplay.cshtml
+++ b/FoodDatabase/Views/MfpDay/DayDisplay.cshtml
@@ -1,20 +1,7 @@
 ﻿@model FoodDatabase.Models.MyFitnessPalDay.MfpDay
-@using FoodDatabase.Controllers
-@using FoodDatabase.MfpSiteParser
+
 @{
     ViewBag.Title = "DayDisplay";
-
-
-    //    ((MfpDayController)this.ViewContext.Controller).Worker(DateTime.Now);
-
-
-
-
-
-    //var temp = ViewBag.fj;
-    //BackgroundLoader bl = new BackgroundLoader();
-    //bl.Worker(Model.SelectedDate);
-    int i = 0;
 }
 <script src="~/Scripts/jquery-ui.js"></script>
 <script src="~/Scripts/jquery-3.5.1.js"></script>
@@ -30,7 +17,11 @@
             <div class="col-md-6">
                 <h2>Day Display</h2>
             </div>
-            <div class="col-md-6" >
+            @{
+                string url = "/?id=" + Model.SelectedDate.ToString("yyyy-MM-dd");
+                <input type="button" value="Back" onclick="window.location.href='@url';" />
+            }
+            <div class="col-md-6">
                 @Html.TextBoxFor(model => model.SelectedDate, new { onchange = "DateChanged()", @type = "date", @class = "form-control datepicker", @Value = Model.SelectedDate.ToString("yyyy-MM-dd") })
                 @Html.ValidationMessageFor(model => model.SelectedDate, "", new { @class = "text-danger" })
             </div>
