--- a/FoodDatabase/Views/FoodItemTypes/Details.cshtml
+++ b/FoodDatabase/Views/FoodItemTypes/Details.cshtml
@@ -2,124 +2,174 @@
 
 @{
     ViewBag.Title = "Details";
-}
+    var topWords = @Model.GetTopWords(7, 3);
+    string firstWord = "";
+    string secondWord = "";
+    string thirdWord = "";
+    string fourthWord = "";
+    string fifthWord = "";
+    string sixthWord = "";
+    string seventhWord = "";
+    string eigthWord = "";
 
+
+}
+@if (topWords != null)
+{
+    firstWord = topWords.Count > 0 ? topWords[0] : "";
+    secondWord = topWords.Count > 1 ? topWords[1] : "";
+    thirdWord = topWords.Count > 2 ? topWords[2] : "";
+    fourthWord = topWords.Count > 3 ? topWords[3] : "";
+    fifthWord = topWords.Count > 4 ? topWords[4] : "";
+    sixthWord = topWords.Count > 5 ? topWords[5] : "";
+    seventhWord = topWords.Count > 6 ? topWords[6] : "";
+    eigthWord = topWords.Count > 7 ? topWords[7] : "";
+}
 <h2>Food Item Type Details</h2>
 
 <div>
     <hr />
-    <dl class="dl-horizontal">
-        <table>
-            <tbody>
-                <tr>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                    <td width="100px">
-                        Macro Percent
-                    </td>
-                    <td width="100px">
-                        Avg Percent
-                    </td>
-                </tr>
-                <tr>
-                    <td width="100px">
-                        @Html.DisplayNameFor(model => model.FoodItemType.TypeName)
-                    </td>
-                    <td width="100px">
-                        @Html.DisplayFor(model => model.FoodItemType.TypeName)
-                    </td>
-                    <td>
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Unit)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Unit)
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Calories)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Calories)
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Carbs)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Carbs)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.CarbsPercent)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.CarbsAveragePercent)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Fats)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Fats)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.FatsPercent)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FatsAveragePercent)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Protein)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Protein)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.ProteinPercent)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.ProteinAveragePercent)
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.Fibre)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.Fibre)
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        @Html.DisplayNameFor(model => model.FoodItemType.GlycemicIndex)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(model => model.FoodItemType.GlycemicIndex)
-                    </td>
-                    <td>
-                    </td>
-                </tr>
-            </tbody>
-        </table>        
-    </dl>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                </td>
+                <td>
+                </td>
+                <td width="100px">
+                    Macro Percent
+                </td>
+                <td width="100px">
+                    Avg Percent
+                </td>
+
+                <td></td>
+                <td></td>
+                <td>Top Words</td>
+            </tr>
+            <tr>
+                <td width="100px">
+                    @Html.DisplayNameFor(model => model.FoodItemType.TypeName)
+                </td>
+                <td width="100px">
+                    @Html.DisplayFor(model => model.FoodItemType.TypeName)
+                </td>
+                <td>
+                </td>
+                <td>
+                </td>
+                <td></td>
+                <td></td>
+                <td>@firstWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Unit)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Unit)
+                </td>
+                <td>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>@secondWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Calories)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Calories)
+                </td>
+                <td>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>@thirdWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Carbs)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Carbs)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.CarbsPercent)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.CarbsAveragePercent)
+                </td>
+                <td></td>
+                <td></td>
+                <td>@fourthWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Fats)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Fats)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.FatsPercent)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FatsAveragePercent)
+                </td>
+                <td></td>
+                <td></td>
+                <td>@fifthWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Protein)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Protein)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.ProteinPercent)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.ProteinAveragePercent)
+                </td>
+                <td></td>
+                <td></td>
+                <td>@sixthWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.Fibre)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.Fibre)
+                </td>
+                <td>
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>@seventhWord</td>
+            </tr>
+            <tr>
+                <td>
+                    @Html.DisplayNameFor(model => model.FoodItemType.GlycemicIndex)
+                </td>
+                <td>
+                    @Html.DisplayFor(model => model.FoodItemType.GlycemicIndex)
+                </td>
+                <td>
+                </td>
+                <td></td>
+                <td></td>
+                <td>@eigthWord</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.FoodItemType.Id }) |
