--- a/FoodDatabase/Views/Shared/_Layout.cshtml
+++ b/FoodDatabase/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using FoodDatabase.Models.MyFitnessPalDay
+<!DOCTYPE html>
+<script src="~/Scripts/jquery-ui.js"></script>
+<script src="~/Scripts/jquery-3.5.1.js"></script>
+<script>
+    function DateChanged() {
+        document.getElementById("dateSelector").submit();
+    }
+</script>
+
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,13 +36,16 @@
                     <li>@Html.ActionLink("Food Types", "FoodItemTypes", "Home")</li>
                 </ul>
             </div>
+                       
         </div>
+
+
     </div>
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - MFP Parser</p>
         </footer>
     </div>
 
